Add support for Android as a benchmark target
Co-authored-by: Qizhao Chen <kx412764776@gmail.com>